--- a/VoteWithYourWallet.Api/VoteWithYourWallet.Api.csproj
+++ b/VoteWithYourWallet.Api/VoteWithYourWallet.Api.csproj
@@ -4,12 +4,13 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.1.35" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1"/>
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     </ItemGroup>
 
     <ItemGroup>
@@ -18,6 +19,9 @@
 
     <ItemGroup>
       <Content Remove="appsettings.json" />
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
       <None Include="appsettings.json">
         <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       </None>
